--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "jb-computers",
   "version": "1.0.0",
   "description": "JB Computers Website",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "http-server -p 8000", // Command to start the local server
-    "build": "webpack" // Command to build the project using Webpack
+    "start": "node server.js",
+    "build": "webpack"
   },
   "dependencies": {
-    "jquery": "^3.6.0", // Dependency for jQuery
-    "react": "^18.0.0", // Dependency for React
-    "react-dom": "^18.0.0", // Dependency for ReactDOM
-    "vue": "^2.6.14" // Dependency for Vue.js
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "mongoose": "^5.12.3",
+    "ejs": "^3.1.6"
   },
   "devDependencies": {
-    "webpack": "^5.0.0", // Development dependency for Webpack
-    "less": "^4.0.0", // Development dependency for LESS
-    "babel-loader": "^8.0.0", // Development dependency for Babel loader
-    "style-loader": "^3.0.0", // Development dependency for style loader
-    "css-loader": "^6.0.0", // Development dependency for CSS loader
-    "less-loader": "^10.0.0" // Development dependency for LESS loader
+    "webpack": "^5.0.0",
+    "less": "^4.0.0",
+    "babel-loader": "^8.0.0",
+    "style-loader": "^3.0.0",
+    "css-loader": "^6.0.0",
+    "less-loader": "^10.0.0"
   },
   "author": "Your Name",
   "license": "MIT"
